tests/purs/warning/CustomWarning4.out
Error 1 of 4:

  in module [33mMain[0m
  at tests/purs/warning/CustomWarning4.purs:21:1 - 21:15 (line 21, column 1 - line 21, column 15)

    A custom warning occurred while solving type class constraints:

      Custom label hello


  in value declaration [33mbaz'[0m

  See https://github.com/purescript/documentation/blob/master/errors/UserDefinedWarning.md for more information,
  or to contribute content related to this error.

Error 2 of 4:

  in module [33mMain[0m
  at tests/purs/warning/CustomWarning4.purs:24:1 - 24:16 (line 24, column 1 - line 24, column 16)

    A custom warning occurred while solving type class constraints:

      Custom label hello


  in value declaration [33mbaz''[0m

  See https://github.com/purescript/documentation/blob/master/errors/UserDefinedWarning.md for more information,
  or to contribute content related to this error.

Error 3 of 4:

  in module [33mMain[0m
  at tests/purs/warning/CustomWarning4.purs:27:1 - 27:17 (line 27, column 1 - line 27, column 17)

    A custom warning occurred while solving type class constraints:

      Custom label "h e l l o"


  in value declaration [33mbaz'''[0m

  See https://github.com/purescript/documentation/blob/master/errors/UserDefinedWarning.md for more information,
  or to contribute content related to this error.

Error 4 of 4:

  in module [33mMain[0m
  at tests/purs/warning/CustomWarning4.purs:30:1 - 30:18 (line 30, column 1 - line 30, column 18)

    A custom warning occurred while solving type class constraints:

      Custom label "hel\"lo"


  in value declaration [33mbaz''''[0m

  See https://github.com/purescript/documentation/blob/master/errors/UserDefinedWarning.md for more information,
  or to contribute content related to this error.

